--- a/cailab/templates/student.html
+++ b/cailab/templates/student.html
@@ -68,9 +68,9 @@
           {% if biographies %}
           {% for biography in biographies %}
           <div class="student-container col-lg-4">
-              <a class="article-subject" href="{{ biography.get_absolute_url }}">
-                <img class="bd-placeholder-img" width="184" height="240" src="{{biography.images.url}}" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
-              </a>
+            <a class="article-subject" href="{{ biography.get_absolute_url }}" style="width: 180px; height: 240px; margin: 0 auto; display: block;">
+            <img class="bd-placeholder-img" width="184" height="240" src="{{biography.images.url}}" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+            </a>
             <div class="detail-top">
               <h3>{{biography.kr_name}}</h3>
               <h3>{{biography.eng_name}}</h3>
