--- a/cailab/templates/cailab/post_detail.html
+++ b/cailab/templates/cailab/post_detail.html
@@ -5,7 +5,6 @@
 <link rel="stylesheet" href="{% static 'src/scss/library.css' %}" />
 {% endblock %}
 
-
 {% block header %}
     <!-- header -->
     <header>
@@ -48,6 +47,8 @@
 {% endblock %}
 
 {% block body %}
+
+{% load hitcount_tags %}
     <!-- head summary -->
     <div id="head">
         <div class="bg">
@@ -97,6 +98,7 @@
                     <th class="p-3 text-sm font-semibold tracking-wide text-left">번호</th>
                     <th class="p-3 text-sm font-semibold tracking-wide text-center">제목</th>
                     <th class="p-3 text-sm font-semibold tracking-wide text-center">작성자</th>
+                    <th class="p-3 text-sm font-semibold tracking-wide text-center">조회수</th>
                     <th class="p-3 text-sm font-semibold tracking-wide text-center">작성일</th>
                 </tr>
                 </thead>
@@ -111,6 +113,7 @@
                             <a class="article-subject" href="{{ post.get_absolute_url }}">{{post.title}}</a>
                         </td>
                         <td class="p-3 text-sm font-semibold text-center">관리자</td>
+                        <td class="p-3 text-sm font-semibold text-center">{% get_hit_count for post %}</td>
                         <td class="p-3 text-sm font-semibold text-center">{{post.modify_date_form}}</td>
                     </tr>
                     {% endfor %}
