--- a/cailab/templates/library.html
+++ b/cailab/templates/library.html
@@ -47,6 +47,8 @@
 {% endblock %}
 
 {% block body %}
+    
+{% load hitcount_tags %}
 <!-- head summary -->
 <div id="head">
     <div class="bg">
@@ -67,6 +69,7 @@
                     <th class="p-3 text-sm font-semibold tracking-wide text-left">번호</th>
                     <th class="p-3 text-sm font-semibold tracking-wide text-center">제목</th>
                     <th class="p-3 text-sm font-semibold tracking-wide text-center">작성자</th>
+                    <th class="p-3 text-sm font-semibold tracking-wide text-center">조회수</th>
                     <th class="p-3 text-sm font-semibold tracking-wide text-center">작성일</th>
                 </tr>
                 </thead>
@@ -81,12 +84,14 @@
                             <a class="article-subject" href="{{ post.get_absolute_url }}">{{post.title}}</a>
                         </td>
                         <td class="p-3 text-sm font-semibold text-center">관리자</td>
+                    
+                        <td class="p-3 text-sm font-semibold text-center">{% get_hit_count for post %}</td>
                         <td class="p-3 text-sm font-semibold text-center">{{post.modify_date_form}}</td>
                     </tr>
                     {% endfor %}
                     {% else %}
                     <tr >
-                        <td colspan="4" class="text-center">질문이 없습니다. </td>
+                        <td colspan="5" class="text-center">질문이 없습니다. </td>
                     </tr>
                     {% endif %}
                 </tbody>
