--- a/static/src/scss/library.scss
+++ b/static/src/scss/library.scss
@@ -174,6 +174,8 @@ display: none;
 }
 
 @media screen and (max-width: 1060px) {
+body .post-container{
+    width: 90%;}
 .board-container{
   width: 100%;
   .table-container{
@@ -225,6 +227,7 @@ display: none;
         }
     }
 } 
+
 }
 
 @media screen and (max-width: 767px){
