--- a/cailab/templates/cailab/biography_detail.html
+++ b/cailab/templates/cailab/biography_detail.html
@@ -20,8 +20,15 @@
                 <a class="nav-link" aria-current="page" href="{% url 'main' %}">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" id="dropdown05" data-bs-toggle="dropdown" aria-expanded="false">People</a>
-                <ul class="dropdown-menu " aria-labelledby="dropdown05">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown" aria-expanded="false">Research</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown05">
+                  <li><a class="dropdown-item" href="{% url 'projects' %}">Projects</a></li>
+                  <li><a class="dropdown-item" href="{% url 'area' %}">Area</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown" aria-expanded="false">People</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown05">
                   <li><a class="dropdown-item" href="{% url 'professor' %}">Professor</a></li>
                   <li><a class="dropdown-item" href="{% url 'student' %}">student</a></li>
                   <li><a class="dropdown-item" href="{% url 'alumni' %}">alumni</a></li>
@@ -34,7 +41,7 @@
                   <a class="nav-link" href="{% url 'news' %}">news</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="{% url 'library' %}">Board</a>
+                  <a class="nav-link active" href="{% url 'library' %}">Board</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
