--- a/cailab/templates/cailab/post_detail.html
+++ b/cailab/templates/cailab/post_detail.html
@@ -82,7 +82,7 @@
             {% endif %}
         <div class='board-view-content'>
             <div class="board-view-detail">
-                <p>{{post.content}}</p>
+                <p>{{post.content | linebreaksbr}}</p>
             </div>
         </div>
         </div>
