--- a/cailab/templates/cailab/projects_detail.html
+++ b/cailab/templates/cailab/projects_detail.html
@@ -2,8 +2,10 @@
 
 {% block link %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'src/scss/publications.css' %}" />
+<link rel="stylesheet" href="{% static 'src/scss/bio_detail.css' %}" />
 {% endblock %}
+
+
 
 {% block header %}
     <!-- header -->
@@ -20,13 +22,13 @@
                 <a class="nav-link" aria-current="page" href="{% url 'main' %}">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown" aria-expanded="false">Research</a>
+                <a class="nav-link dropdown-toggle active" href="#" id="dropdown05" data-bs-toggle="dropdown" aria-expanded="false">Research</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown05">
                   <li><a class="dropdown-item" href="{% url 'projects' %}">Projects</a></li>
                   <li><a class="dropdown-item" href="{% url 'area' %}">Area</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown ">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown" aria-expanded="false">People</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown05">
                   <li><a class="dropdown-item" href="{% url 'professor' %}">Professor</a></li>
@@ -35,7 +37,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                  <a class="nav-link active" href="{% url 'publications' %}">Publications</a>
+                  <a class="nav-link" href="{% url 'publications' %}">Publications</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="{% url 'news' %}">news</a>
@@ -54,49 +56,46 @@
 {% endblock %}
 
 {% block body %}
+<style>
+  img{
+    height: 400px;
+  }
+  @media screen and (max-width: 1060px) {
+    img{
+    height: auto;
+    width: 95%;
+    object-fit: contain;
+  }
+  .main-container{
+    padding-top: 0;
+  }
+  .main-container .main-contents{
+    padding-bottom: 0px;
+  }
+    }
+</style>
     <!-- head summary -->
     <div id="head">
         <div class="bg">
             <div>
-                <h1 class="text">Publications</h1>
+                <h1 class="text" style="font-family:'Malgun Gothic';">{{projects.title}}</h1>
             </div>
         </div>
     </div>
 
-    <main class="main-container">
-      <section>
-        <div class="publication-list-container">
-          <h3 class="SCI-title">International Journals (SCI)
-            <hr>
-          </h3>
-          {% for pub in data %}
-          <div>
-              <div class="publication-list">
-                <strong>{{forloop.counter}}.</strong> 
-                <span class="publication-content">{{pub}}</span>
-              </div>
+    <!-- main -->
+    <div class="main-container">
+      <div>
+          <div class="main-contents" >
+            <div class="img-container" style="margin: 0 auto; display: block;">
+              <img src="{{projects.images.url}}">
+            </div>
           </div>
-          {% endfor %}
-      </section>
-      <section>
-        <div class="publication-list-container">
-          <h3 class="KCI-title" style="margin-bottom: 50px;">Korean Journals (KCI)
-            <hr>
-          </h3>
-          {% for kci_pub in kci_data %}
-          <div>
-              <div class="publication-list">
-                <strong>{{forloop.counter}}.</strong> 
-                <span class="publication-content">{{kci_pub}}</span>
-              </div>
+          <div class="content-container">
+            <p class="project-text" style="font-family:'Malgun Gothic'; font-size: 1rem; font-weight: 600;">
+              {{projects.content | linebreaksbr}}
+            </p>
           </div>
-          {% endfor %}
-        </div>
-      </section>
       </div>
-    </main>
-    
-    <!-- scripts -->
-    <script src="{% static 'js/slide.js' %}"></script>
-    <script src="{% static 'js/popup.js' %}"></script>
+    </div>
 {% endblock %}
