area add Mar. 2

--- a/cailab/templates/cailab/projects_detail.html
+++ b/cailab/templates/cailab/projects_detail.html
@@ -92,7 +92,8 @@
             </div>
           </div>
           <div class="content-container">
-            <p class="project-text" style="font-family:'Malgun Gothic'; font-size: 1rem; font-weight: 600;">
+            <h4 style="font-family:'Malgun Gothic'; font-weight: 600; margin-bottom: 1rem;">연구수행목표</h4>
+            <p class="project-text" style="font-family:'Malgun Gothic'; font-size: 1rem; font-weight: 400;">
               {{projects.content | linebreaksbr}}
             </p>
           </div>
