--- a/cailab/templates/area.html
+++ b/cailab/templates/area.html
@@ -3,10 +3,35 @@
 {% block link %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'src/scss/publications.css' %}" />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 {% endblock %}
 
 {% block header %}
-    <!-- header -->
+
+<style>
+  .main-container{
+    width: 80%;
+  }
+  @media screen and (max-width: 1060px) {
+    main{
+      width: 100%;
+    }
+    section{
+      width: 100%;
+    }
+  }
+  @media screen and (max-width: 990px) {
+    .img-content{
+      padding-left: 0!important;
+      padding-right: 0!important;
+    }
+    .text-container .text-content{
+      padding: 0rem!important;
+    }
+  }
+</style>
+
+<!-- header -->
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow">
         <div class="container-fluid">
@@ -64,13 +89,106 @@
     </div>
 
     <main class="main-container">
-      <section>
-        <div class="publication-list-container">
-          <h3 class="projects-container" style="margin-bottom: 50px;">Projects
-            <hr>
-          </h3>
-        </div>
+        <!-- Content section 1-->
+      <section id="scroll">
+          <div class="container px-4">
+              <div class="row gx-5 align-items-center">
+                  <div class="col-lg-6 order-lg-2">
+                      <div class="img-content p-5"><img class="img-fluid rounded-circle" src="{%static 'images/area/deep_learning.png'%}" alt="..." /></div>
+                  </div>
+                  <div class="text-container col-lg-6 order-lg-1">
+                      <div class="text-content p-5">
+                          <h3 class="display-6" style="padding-top: 25px; margin-bottom: 25px;">Deep Learning</h3>
+                          <p>딥러닝은 머신 러닝의 특정한 한 분야로서 연속된 층 layer에서 점진적으로 의미 있는 표현을 배우는 데 강점을 보입니다. 심층 신경망을 사용하여 데이터로부터 표현을 추출하고 분류 및 예측을 수행할 수 있습니다. CAI 연구실에서는 딥러닝 모델 중, CNN, LSTM, GAN 등의 대표적인 딥러닝 모델을 활용한 표현 학습, 분류, 예측 관련 연구를 진행 중입니다.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
       </section>
-    </main>
+      <hr>
+      <!-- Content section 2-->
+      <section>
+          <div class="container px-4">
+              <div class="row gx-5 align-items-center">
+                  <div class="col-lg-6">
+                      <div class="img-content p-5"><img class="img-fluid rounded-circle" src="{%static 'images/area/IoE.jpg'%}" alt="..." /></div>
+                  </div>
+                  <div class="text-container col-lg-6">
+                      <div class="text-content p-5">
+                          <h3 class="display-6" style="padding-top: 25px; margin-bottom: 25px;">Internet of Energy</h3>
+                          <p>에너지 인터넷(Internet of Energy(IoE))은 신재생 에너지, 클라우드 시스템 등을 결합한 시스템입니다. 에너지 인터넷은 에너지 인프라의 생산성을 향상시키기 위해 순환 에너지 시스템에 사물 인터넷 혁신을 구현합니다. CAI 연구실에서는 스마트 그리드, 에너지 거래 시스템 등 다양한 에너지 인터넷 분야를 연구 중입니다.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <hr>
+      <section id="scroll">
+        <div class="container px-4">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="img-content p-5"><img class="img-fluid rounded-circle" src="{%static 'images/area/healthcare.jpg'%}" alt="..." /></div>
+                </div>
+                <div class="text-container col-lg-6 order-lg-1">
+                    <div class="text-content p-5">
+                        <h3 class="display-6" style="margin-bottom: 25px;">Smart Healthcare</h3>
+                        <p>스마트 헬스케어는 각종 정보통신 기술을 활용하여 건강 관리를 받을 수 있는 시스템입니다. 소비자는 어플리케이션 또는 웹 등으로 간편하게 건강관리, 진료를 받을 수 있으며 최근 비대면 시대에 발 맞추어 스마트 헬스케어 시장이 크게 부상하고 있습니다. CAI 연구실은 스마트 헬스케어에 사용되는 동작인식, 이상 진단 등을 연구 중입니다.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <!-- Content section 2-->
+    <section>
+        <div class="container px-4">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="img-content p-5"><img class="img-fluid rounded-circle" src="{%static 'images/area/recommender.jpg'%}" alt="..." /></div>
+                </div>
+                <div class="text-container col-lg-6">
+                    <div class="text-content p-5">
+                        <h3 class="display-6" style="padding-top: 25px; margin-bottom: 25px;">Recommender System</h3>
+                        <p>사용자의 취향 및 선호도에 반응하여 맞춤형 서비스를 추천하는 시스템입니다. 추천 시스템 활용예시로는 유튜브 추천 알고리즘, 인스타그램 친구 추천 알고리즘 등이 있습니다. CAI 연구실에서는 사용자에게 맞춤형 콘텐츠를 추천하는 알고리즘, 엔진 등을 연구 중입니다.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section id="scroll">
+      <div class="container px-4">
+          <div class="row gx-5 align-items-center">
+              <div class="col-lg-6 order-lg-2">
+                  <div class="img-content p-5"><img class="img-fluid rounded-circle" src="{%static 'images/area/IoT.png'%}" alt="..." /></div>
+              </div>
+              <div class="text-container col-lg-6 order-lg-1">
+                  <div class="text-content p-5">
+                      <h3 class="display-6" style="padding-top: 25px; margin-bottom: 25px;">Internet of Things</h3>
+                      <p>사물인터넷(Internet of Things(IoT))는 첨단 네트워크에 각종 센서, IoT 기기들이 연결되는 환경을 말합니다. 세계적으로 4차 산업혁명, 5G 시대가 오면서 IoT 구현 환경에서의 다양한 연구가 진행 중입니다. CAI 연구실에서는 IoT 환경에서의 고장 진단, 이상 진단 등을 연구 중입니다. </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  <hr>
+  <!-- Content section 2-->
+  <section>
+      <div class="container px-4">
+          <div class="row gx-5 align-items-center">
+              <div class="col-lg-6">
+                  <div class="img-content p-5"><img class="img-fluid rounded-circle" src="{%static 'images/area/satellite_communication.jpg'%}" alt="..." /></div>
+              </div>
+              <div class="text-container col-lg-6">
+                  <div class="text-content p-5">
+                      <h3 class="display-6" style="margin-bottom: 25px;">Satellite Communications</h3>
+                      <p>위성 통신(Satellite Communications)은 위성 사이의 통신 기술을 의미합니다. 5G 시대 이후에 초연결 시대인 6G에 적극적으로 활용될 기술로 각광받고 있습니다. CAI 연구실은 딥러닝, 강화학습 등을 활용하여 위성 사이의 통신 최적화, 시스템 등을 연구 중입니다.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  </main>
     
 {% endblock %}
